second commit mvc basics with java html table of multiply

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -44,6 +44,32 @@
 		</p>
 		<input type="submit" class="btn btn-info" value="Find prime numbers">
 	</form>
+	<hr>
+	<h2>Exercise 5 Login</h2>
+	<form action="LoginServlet" method="get">
+		<p>
+			<label for="txtUser">User name</label>
+			<input class="form-control" type="text" name="txtUser" id="txtUser">
+		</p>
+		<p>
+			<label for="txtPass">Password</label>
+			<input class="form-control" type="password" name="txtPass" id="txtPass">
+		</p>
+		<input type="submit" class="btn btn-success" value="Login">
+	</form>
+	<h2> Table Servlet</h2>
+	<form action="TableServlet" method="post">
+		<p>
+			<label for="txtNumber">Number</label>
+			<input class="form-control" type="number" name="txtNumber" id="txtNumber">
+		</p>
+		<p>
+			<label for="txtRange">Range</label>
+			<input class="form-control" type="number" name="txtRange" id="txtRange">
+		</p>
+		
+		<input type="submit" class="btn btn-success" value="Multiply">
+	</form>
 	
 	
 	<script type="text/javascript" src="js/jQuery3.4.1.js"></script>
